--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -64,7 +64,28 @@
                             </mat-form-field>
                             <div class="example-container mat-elevation-z8">
                                 <table mat-table [dataSource]="dataSource" matSort>
-                                    <!-- Item Column -->
+                                    <ng-container matColumnDef="sno">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> SNo </th>
+                                        <td mat-cell *matCellDef="let customertable;index as i"> {{i+1}}. </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+                                    <ng-container matColumnDef="update">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Update </th>
+                                        <td mat-cell *matCellDef="let customertable">
+                                            <mat-icon (click)="selectedcustomer(customertable)" color="primary">
+                                                autorenew
+                                            </mat-icon>
+                                        </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+                                    </ng-container>
+                                    <ng-container matColumnDef="delete">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
+                                        <td mat-cell *matCellDef="let customertable">
+                                            <mat-icon (click)="deletecustomer(customertable.customerid)" color="warn">delete</mat-icon>
+                                        </td>
+                                        <td mat-footer-cell *matFooterCellDef> </td>
+
+                                    </ng-container>
                                     <ng-container matColumnDef="customername">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
                                         <td mat-cell *matCellDef="let customertable"> {{customertable.customername}}
@@ -121,7 +142,9 @@
                 </div>
                 <div class="card-footer">
                     <div class="example-button-row">
-                        <button mat-raised-button (click)="onSubmit()" color="primary">Save</button>
+                        <button mat-raised-button *ngIf="!updatebtn" (click)="onSubmit()" color="primary">Save</button>
+                        <button mat-raised-button *ngIf="updatebtn" (click)="updatecustomer()" color="accent">Update</button>
+                        <button mat-raised-button *ngIf="updatebtn" (click)="cancle()" color="warn">Cancel</button>
                     </div>
                 </div>
             </div>
